# fastapi_template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 157fc43f3810_initial_project.py  29c24601ee56_add_role_in_user.py  71ff93e29992_add_user_model.py
app/: main.py
app/api/: dependencies.py
app/api/routers/: auth.py  users.py
app/api/schemas/: auth.py  user.py
app/core/: config.py  logger.py  security.py
app/db/: database.py  models.py
app/errors/: exceptions.py  handlers.py
app/repositories/: base_repository.py  user_repository.py
app/services/: auth_service.py  user_service.py
app/utils/: logging_decorators.py  unitofwork.py
tests/: conftest.py
tests/test_routers/auth/: conftest.py  test_login.py  test_refresh.py  test_register.py
